--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   db:
+    container_name: o_cinema
     image: postgres:latest  # Используем официальный образ PostgreSQL
     restart: always
     environment:
@@ -9,9 +10,6 @@ services:
       POSTGRES_USER: cinema_user
       POSTGRES_PASSWORD: cinema_password
     ports:
-      - "5432:5432"
+      - "5438:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data  # Храним данные даже после перезапуска контейнера
-
-volumes:
-  postgres_data:
+      - /GitHub/online_cinema/database:/var/lib/postgresql/data  # Храним данные даже после перезапуска контейнера
