--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -10,9 +10,25 @@ services:
       POSTGRES_USER: cinema_user
       POSTGRES_PASSWORD: cinema_password
     ports:
-      - "5438:5432"
+      - "5438:5432"   #- "5438:5432"
     volumes:
       - cinema_volume:/var/lib/postgresql/data  # Храним данные даже после перезапуска контейнера
+
+  web:
+    build:
+      context: ../backend_base/myproject
+    container_name: cinema_web
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - ../backend_base/myproject:/app
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+
+
+
+
 volumes:
   cinema_volume:
     driver: local
